rubocop/examples/bad/Style_SpaceBeforeFirstArg.rb
# TODO: Put one space between the method name and the first argument.

# bad
something  x
something   y, z
